--- a/css/style.css
+++ b/css/style.css
@@ -8,7 +8,7 @@ body{
     padding: 0px 15px;
 }
 .header{
-    margin-top: 80px;
+    margin-top: 50px;
 }
 .header__title{
     display: inline-block;
@@ -39,10 +39,9 @@ body{
     
 }
 .header__subtitle{
-    font-size: 120px;
+    font-size: 64px;
     line-height: 100%;
-    letter-spacing: -4.817px;
-    min-width: 621px;
+    letter-spacing: 4.817px;
     color: #F3F6F9;
     margin-top: 20px;
     margin-left: 74px;
@@ -154,4 +153,77 @@ body{
     object-fit: cover;
     width: 23px;
     height: 23px;
+}
+.footer{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 40px;
+}
+.footer__developer{
+    width: 100%;
+    color: #F3F6F9;
+    text-decoration: underline;
+    text-underline-offset: 5px;
+}
+@media (max-width: 470px){
+    .container{
+        max-width: 450px;
+        margin: 0px auto;
+        padding: 0px 15px;
+    }
+    .header{
+        margin-top: 40px;
+    }
+    .header__title{
+        max-width: 183px;
+        font-size: 15px;
+        line-height: 100%;
+        letter-spacing: -0.6px;
+        text-align: center;
+        border-radius: 200px;
+        text-transform: uppercase;
+        margin-left: 25px;
+    }
+    .header__datetime{
+        display: inline-block;
+        background-color: #6532F8;
+        color: #F3F6F9;
+        padding: 10px;
+        min-width: 75px;
+        font-size: 15px;
+        line-height: 100%;
+        letter-spacing: -0.6px;
+        text-align: center;
+        border-radius: 200px;
+        text-transform: uppercase;
+        
+    }
+    .header__subtitle{
+        width: 100%;
+        font-size: 64px;
+        line-height: 100%;
+        letter-spacing: 1px;
+        color: #F3F6F9;
+        margin-top: 20px;
+        margin-left: 0px;
+    }
+    .main__content-container{
+        max-width: 100%;
+        margin: 0 auto;
+        padding: 0 15px;
+    }
+    .main__input{
+        width: 100%;
+        border: none;
+        background: transparent;
+        border-bottom: 1px solid #F3F6F9;
+        opacity: 100%;
+        outline: none;
+        font-size: 30px;
+        line-height: 100%;
+        letter-spacing: -0.6px;
+        color: #F3F6F9;
+        padding-bottom: 15px;
+    }
 }
